--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,7 @@ html{
     min-width: 350px;
     margin: 1rem auto;
     width: 70%;
+    cursor: pointer;
 }
 
 section.content {
@@ -367,6 +368,7 @@ section.content {
     text-align: center;
     margin: 1.5rem auto;
     padding: 0.25rem;
+    cursor: default;
 }
 
 .titleReco {
@@ -384,6 +386,7 @@ section.content {
     margin: 1.5rem auto;
     margin-top: 8rem;
     padding: 0.25rem;
+    cursor: default;
 }
 
 #back-button {
@@ -438,9 +441,15 @@ section.content {
 }
 
 #imageAttri {
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 10rem;
+    position: absolute;
+    transform: translateY(225%);
+}
+
+#imageAttri.imageAttriRe {
+    transform: translateY(25%);
 }
 
 #imageAttri > img {
@@ -474,7 +483,7 @@ section.content {
         width: 90%;
         max-width: 620px;
     }
-} 
+}
 
 @media (min-width:1400px) {
     section.content {
@@ -485,5 +494,4 @@ section.content {
         width: 90%;
         max-width: 620px;
     }
-} 
-
+}
